--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Interactive frame">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Picture</title>
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body class="body">
@@ -25,10 +25,24 @@
             <input type="color" name="base" id="base" value="#ffc0cb">
         </section>
         <section class="picture_section">
-            <div class="img_wrapper"><img class="img" src="../images/main-picture.jpg" alt="Main Picture"></div>
+            <div class="img_wrapper"><img class="img" src="./images/main-picture.jpg" alt="Main Picture"></div>
         </section>
     </main>
     <script src="../js/main.js"></script>
 </body>
 
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
